exports[`test Child node 1`] = `
<div
  className="pe-list-tile          ">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content">
      <Icon
        svg={
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
              }
            } />
        } />
    </div>
  </div>
</div>
`;

exports[`test Dark tone class + light theme class 1`] = `
<div
  className="pe-list-tile         pe-list-tile--front pe-light-tone">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content pe-list-tile__content--front">
      <Icon
        svg={
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z"/></svg>",
              }
            } />
        }
        type="medium" />
    </div>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`test Dark tone class + light tone 1`] = `
<div
  className="pe-list-tile        pe-light-tone pe-list-tile--front ">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content pe-list-tile__content--front">
      <Icon
        svg={
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z"/></svg>",
              }
            } />
        }
        type="medium" />
    </div>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`test Dark tone class + light tone class 1`] = `
<div
  className="pe-list-tile         pe-list-tile--front pe-light-tone">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content pe-list-tile__content--front">
      <Icon
        size="medium"
        svg={
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
              }
            } />
        } />
    </div>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`test No options 1`] = `
<div
  className="pe-list-tile          ">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content" />
  </div>
</div>
`;

exports[`test Option: child (JSX) 1`] = `
<ListTile
  front={
    <Icon>
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg">
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z" />
      </svg>
    </Icon>
  }
  title="Ancillary Justice" />
`;

exports[`test Option: class 1`] = `
<div
  className="pe-list-tile          class-x">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content" />
  </div>
</div>
`;

exports[`test Option: className 1`] = `
<div
  className="pe-list-tile          className-x">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content" />
  </div>
</div>
`;

exports[`test Option: content 1`] = `
<div
  className="pe-list-tile          ">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content">
      <Icon
        svg={
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
              }
            } />
        } />
    </div>
  </div>
</div>
`;

exports[`test Option: disabled url -- dark tone class 1`] = `
<div
  className="pe-list-tile  pe-list-tile--disabled        ">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`test Option: element 1`] = `
<a
  className="pe-list-tile          ">
  <a
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content" />
  </a>
</a>
`;

exports[`test Option: events 1`] = `
<div
  className="pe-list-tile          ">
  <div
    className="pe-list-tile__primary"
    onClick={[Function]}
    style={null}>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Click me
      </div>
    </div>
  </div>
</div>
`;

exports[`test Option: front (Icon) 1`] = `
<div
  className="pe-list-tile         pe-list-tile--front ">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content pe-list-tile__content--front">
      <Icon
        svg={
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z"/></svg>",
              }
            } />
        }
        type="medium" />
    </div>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`test Option: front (avatar) 1`] = `
<div
  className="pe-list-tile         pe-list-tile--front ">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content pe-list-tile__content--front">
      <Icon
        avatar={true}
        src="http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png"
        type="large" />
    </div>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`test Option: highSubtitle 1`] = `
<div
  className="pe-list-tile         pe-list-tile--high-subtitle ">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
      <div
        className="pe-list-tile__subtitle pe-list-tile__high-subtitle">
        The body lay naked and facedown, a deathly gray, spatters of blood staining the snow around it. It was minus fifteen degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div>
</div>
`;

exports[`test Option: highSubtitle and compact 1`] = `
<div
  className="pe-list-tile    pe-list-tile--compact     pe-list-tile--high-subtitle ">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
      <div
        className="pe-list-tile__subtitle pe-list-tile__high-subtitle">
        The body lay naked and facedown, a deathly gray, spatters of blood staining the snow around it. It was minus fifteen degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div>
</div>
`;

exports[`test Option: highSubtitle and front (JSX) 1`] = `
<Route
  render={[Function]} />
`;

exports[`test Option: highSubtitle and front -- dark tone class 1`] = `
<Route
  render={[Function]} />
`;

exports[`test Option: highSubtitle and front 1`] = `
<Route
  render={[Function]} />
`;

exports[`test Option: hoverable 1`] = `
<div
  className="pe-list-tile     pe-list-tile--hoverable     ">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`test Option: id 1`] = `
<div
  className="pe-list-tile          "
  id="id-x">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content" />
  </div>
</div>
`;

exports[`test Option: indent 1`] = `
<div
  className="pe-list-tile         pe-list-tile--front ">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content pe-list-tile__content--front" />
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`test Option: ink 1`] = `
<div
  className="pe-list-tile          ">
  <Ripple />
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`test Option: ink with ripple options 1`] = `
<div
  className="pe-list-tile          ">
  <Ripple
    opacityDecayVelocity={0.1} />
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`test Option: secondary (Icon) 1`] = `
<div
  className="pe-list-tile          ">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
    </div>
  </div>
  <div
    className="pe-list-tile__secondary">
    <div
      className="pe-list-tile__content">
      <Icon
        svg={
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z"/></svg>",
              }
            } />
        }
        type="medium" />
    </div>
  </div>
</div>
`;

exports[`test Option: secondary (content) 1`] = `
<div
  className="pe-list-tile          ">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
    </div>
  </div>
  <div
    className="pe-list-tile__secondary">
    <div
      className="pe-list-tile__content">
      <Icon
        svg={
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z"/></svg>",
              }
            } />
        } />
    </div>
  </div>
</div>
`;

exports[`test Option: secondary (url) 1`] = `
<Route
  render={[Function]} />
`;

exports[`test Option: selectable 1`] = `
<div
  className="pe-list-tile      pe-list-tile--selectable    ">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`test Option: selected 1`] = `
<div
  className="pe-list-tile pe-list-tile--selected         ">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`test Option: style (colors) 1`] = `
<div
  className="pe-list-tile         pe-list-tile--front "
  style={
    Object {
      "backgroundColor": "#EF6C00",
      "color": "#fff",
    }
  }>
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content pe-list-tile__content--front">
      <Icon
        svg={
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z"/></svg>",
              }
            } />
        }
        type="medium" />
    </div>
    <div
      className="pe-list-tile__content"
      style={
        Object {
          "backgroundColor": "#EF6C00",
          "color": "#fff",
        }
      }>
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`test Option: subtitle 1`] = `
<div
  className="pe-list-tile         pe-list-tile--subtitle ">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
      <div
        className="pe-list-tile__subtitle">
        The body lay naked and facedown, a deathly gray, spatters of blood staining the snow around it. It was minus fifteen degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div>
</div>
`;

exports[`test Option: title 1`] = `
<div
  className="pe-list-tile          ">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`test Option: url (disabled) 1`] = `
<Route
  render={[Function]} />
`;

exports[`test Option: url 1`] = `
<Route
  render={[Function]} />
`;

exports[`test Themed (color and font size) -- dark tone class 1`] = `
<div
  className="pe-list-tile         pe-list-tile--front tests-list-tile-themed-list-tile">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content pe-list-tile__content--front">
      <Icon
        svg={
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z"/></svg>",
              }
            } />
        }
        type="medium" />
    </div>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`test Themed (color and font size) 1`] = `
<div
  className="pe-list-tile         pe-list-tile--front tests-list-tile-themed-list-tile">
  <div
    className="pe-list-tile__primary"
    style={null}>
    <div
      className="pe-list-tile__content pe-list-tile__content--front">
      <Icon
        svg={
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z"/></svg>",
              }
            } />
        }
        type="medium" />
    </div>
    <div
      className="pe-list-tile__content">
      <div
        className="pe-list-tile__title">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;
